tests/rosetta/out/Zig/24-game.error
zig build: exit status 1
/tmp/24-game.zig:7:66: error: expected expression, found 'invalid bytes'
/tmp/24-game.zig:7:67: note: invalid byte: '\n'
